# Product-Catalog-Data-Processing-and-Analysis

./: .gitignore  README.md  pyproject.toml  requirement.txt
.ipynb_checkpoints/: README-checkpoint.md
dashboard/: nexmart_dashboard.pbix
data/: manufacturers.csv  product_catalog_cleaned.csv  product_properties.csv
data/.ipynb_checkpoints/: product_descriptions-checkpoint.csv
notebooks/: data_pipeline.ipynb  pandasql_sample.ipynb  product_catalog_sql_analysis.ipynb
notebooks/.ipynb_checkpoints/: data_pipeline-checkpoint.ipynb  pandasql_sample-checkpoint.ipynb  product_catalog_sql_analysis-checkpoint.ipynb
src/: analyze.py  clean.py  datasets_inspect.py  engineer.py  main.py  merge.py  visualize.py
src/.ipynb_checkpoints/: clean-checkpoint.py  config-checkpoint.py  datasets_inspect-checkpoint.py  ingest_datasets-checkpoint.py  pipeline-checkpoint.py
